--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
   <div class="container">
     <div class="card" onclick="window.location.href='caisse.html'">
       <img src="https://i.ibb.co/rKT93TPc/pack-kooron-cx901-23711611.jpg" alt="Caisse">
-      <h2>Accéder à la caisse</h2>
+      <h2>CAISSE</h2>
     </div>
     <div class="card" onclick="window.location.href='resume.html'">
       <img src="https://i.ibb.co/Z6tx3GtL/statistiques.jpg" alt="Statistiques">
-      <h2>Voir les statistiques</h2>
+      <h2>STATISTIQUES</h2>
     </div>
     <div class="card" onclick="window.location.href='standard.html'">
       <img src="https://i.ibb.co/fzGLj7Jh/standard.jpg" alt="Standard">
-      <h2>Voir le standard</h2>
+      <h2>STANDARD</h2>
     </div>
   </div>
 </body>
