--- a/standard.html
+++ b/standard.html
@@ -64,7 +64,11 @@
   </style>
 </head>
 <body>
-  <a class="retour" href="index.html">← Retour à l'accueil</a>
+  <div style="margin-bottom: 20px;">
+  <button onclick="window.location.href='index.html'" style="padding: 10px 16px; background-color: #555; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+    ⬅️ Retour à l'accueil
+  </button>
+</div>
   <h1>État du Standard</h1>
   <table id="standardTable">
     <thead>
