--- a/caisse.html
+++ b/caisse.html
@@ -198,12 +198,76 @@
     #popup-observation button:hover {
       background-color: #111;
     }
+
+    body.dark-mode {
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+body.dark-mode .container {
+  background-color: #1e1e1e;
+}
+
+body.dark-mode .ticket-content {
+  background-color: #2c2c2c;
+}
+
+body.dark-mode .produit-btn,
+body.dark-mode .contrat-btn {
+  background-color: #333;
+  color: white;
+}
+
+body.dark-mode .produit-btn:hover,
+body.dark-mode .contrat-btn:hover {
+  background-color: #444;
+}
+
+body.dark-mode .quantite-btn {
+  background-color: #4caf50;
+}
+
+body.dark-mode .quantite-btn:hover {
+  background-color: #388e3c;
+}
+
+body.dark-mode .remise-btns button:not(:last-child) {
+  background-color: #1976d2;
+}
+
+body.dark-mode .remise-btns button:not(:last-child):hover {
+  background-color: #1565c0;
+}
+
+body.dark-mode .remise-btns button:last-child {
+  background-color: #e53935;
+}
+
+body.dark-mode .remise-btns button:last-child:hover {
+  background-color: #b71c1c;
+}
+
+body.dark-mode .popup-box {
+  background-color: #2c2c2c;
+  color: white;
+}
+
+body.dark-mode button {
+  background-color: #333;
+  color: white;
+}
+
+    
   </style>
 </head>
 <body>
   <div style="margin-bottom: 20px; position: relative; z-index: 1;">
     <button onclick="window.location.href='index.html'" style="padding: 10px 16px; background-color: #555; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
       ⬅️ Retour à l'accueil
+    <button onclick="toggleDarkMode()" style="padding: 10px 16px; margin-left: 10px; background-color: #222; color: white; border: none; border-radius: 6px; font-weight: bold; cursor: pointer;">
+  🌙 Mode sombre
+    </button>
+
     </button>
   </div>
 
