--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
       <img src="https://i.ibb.co/fzGLj7Jh/standard.jpg" alt="Standard">
       <h2>STANDARD</h2>
     </div>
+    <div class="card" onclick="window.location.href='ressourcehumaine.html'">
+      <img src="https://i.ibb.co/twLKT3HS/Ressources-Humaines.jpg" alt="Ressources Humaines">
+      <h2>RESSOURCES HUMAINES</h2>
+    </div>
   </div>
 </body>
 </html>
