--- a/caisse.html
+++ b/caisse.html
@@ -261,6 +261,9 @@
       color: white;
     }
 
+    body.dark-mode #popup-message { color: white !important; }
+
+
     body.dark-mode button {
       background-color: #333;
       color: white;
