--- a/caisse.html
+++ b/caisse.html
@@ -11,7 +11,7 @@
       padding: 20px;
       min-height: 100vh;
       position: relative;
-      overflow-y: auto; /* ✅ Permet le scroll vertical */
+      overflow-y: auto;
     }
 
     body::before {
@@ -31,7 +31,7 @@
 
     .container {
       display: flex;
-      flex-direction: column; /* ✅ Par défaut en colonne */
+      flex-direction: column;
       gap: 20px;
       max-width: 1600px;
       width: 100%;
@@ -45,7 +45,7 @@
 
     @media (min-width: 900px) {
       .container {
-        flex-direction: row; /* ✅ Repasser en ligne sur grands écrans */
+        flex-direction: row;
       }
     }
 
@@ -207,7 +207,7 @@
       background-color: #111;
     }
 
-    /* 🌙 Mode sombre */
+    /* Mode sombre */
     body.dark-mode {
       background-color: #121212;
       color: #f0f0f0;
@@ -261,12 +261,9 @@
       color: white;
     }
 
-    body.dark-mode #popup-message { color: white !important; }
-
-
-    body.dark-mode button {
-      background-color: #333;
-      color: white;
+    /* ✅ Forcer la couleur du message en mode sombre */
+    body.dark-mode #popup-message {
+      color: white !important;
     }
   </style>
 </head>
@@ -379,7 +376,9 @@
     }
 
     function afficherPopup(message) {
-      document.getElementById("popup-message").textContent = message;
+      const el = document.getElementById("popup-message");
+      el.textContent = message;
+      el.style.color = 'white'; // ✅ Forcer la couleur
       document.getElementById("popup-observation").style.display = "flex";
     }
 
