--- a/caisse.html
+++ b/caisse.html
@@ -172,26 +172,12 @@
       letter-spacing: 1px;
     }
 
-    #popup-observation {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 1000;
-      justify-content: center;
-      align-items: center;
+    #popup-observation .popup-box {
+      background-color: yellow !important;
+      color: black;
     }
 
-    #popup-observation .popup-box {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 400px;
-      text-align: center;
-    }
+
 
     #popup-observation button {
       margin-top: 10px;
