--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <h2>RESSOURCES HUMAINES</h2>
     </div>
     <div class="card" onclick="accesDirection()">
-      <img src="https://i.ibb.co/NL1fKsR/direction.jpg" alt="Direction">
+      <img src="https://i.ibb.co/CpPP1Qjp/dirigeant.jpg" alt="Direction">
       <h2>DIRECTION</h2>
     </div>
   </div>
