--- a/direction.html
+++ b/direction.html
@@ -14,33 +14,33 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      opacity: 0.96;
     }
 
-    body::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('https://i.ibb.co/pvgVjRyX/logo-rex-diner.png');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      opacity: 0.08;
-      z-index: 0;
-      position: fixed;
+    .overlay {
+      background-color: rgba(255, 255, 255, 0.88);
+      min-height: 100vh;
+      padding: 40px;
     }
 
-    .container {
-      max-width: 1000px;
-      margin: auto;
+    .header-buttons {
+      margin-bottom: 30px;
       position: relative;
       z-index: 1;
-      background-color: rgba(255, 255, 255, 0.92);
-      padding: 40px;
-      border-radius: 12px;
-      margin-top: 40px;
+    }
+
+    .header-buttons button {
+      padding: 10px 16px;
+      background-color: #555;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .header-buttons button:hover {
+      background-color: #333;
     }
 
     h1 {
@@ -48,6 +48,15 @@
       font-size: 36px;
       margin-bottom: 40px;
       color: #333;
+    }
+
+    .section {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
     .section h2 {
@@ -66,35 +75,14 @@
       padding: 8px 0;
       font-size: 18px;
     }
-
-    .retour-container {
-      margin-bottom: 20px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .retour-btn {
-      padding: 10px 16px;
-      background-color: #555;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-      text-decoration: none;
-    }
-
-    .retour-btn:hover {
-      background-color: #333;
-    }
   </style>
 </head>
 <body>
-  <div class="retour-container">
-    <button onclick="window.location.href='index.html'" class="retour-btn">⬅️ Retour à l'accueil</button>
-  </div>
+  <div class="overlay">
+    <div class="header-buttons">
+      <button onclick="window.location.href='index.html'">⬅️ Retour à l'accueil</button>
+    </div>
 
-  <div class="container">
     <h1>Espace Direction</h1>
     <div class="section">
       <h2>Outils de gestion</h2>
