--- a/direction.html
+++ b/direction.html
@@ -72,8 +72,18 @@
     }
 
     .section ul li {
-      padding: 8px 0;
+      padding: 10px 0;
       font-size: 18px;
+    }
+
+    .section ul li a {
+      text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+    }
+
+    .section ul li a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -85,13 +95,13 @@
 
     <h1>Espace Direction</h1>
     <div class="section">
-      <h2>Outils de gestion</h2>
+      <h2>Accès rapide aux outils</h2>
       <ul>
-        <li>📊 Rapport hebdomadaire des ventes</li>
-        <li>📅 Planning des employés</li>
-        <li>💼 Gestion des contrats et dossiers RH</li>
-        <li>🛠️ Suivi technique des équipements</li>
-        <li>📣 Messages de la direction</li>
+        <li>🌐 <a href="https://docs.google.com/spreadsheets/d/1lVCj1qZFd51hEpSQDfOkdkX6QGcRqiCJj1mLvFdYfH8/edit?gid=485697670" target="_blank">Gestion du site internet</a></li>
+        <li>🧾 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=1049653321" target="_blank">Édition des fiches de paie</a></li>
+        <li>👥 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=628608397" target="_blank">Gestion des employés et contrats de travail</a></li>
+        <li>🛒 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=181774848" target="_blank">Gestion des achats</a></li>
+        <li>📈 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=1454627420" target="_blank">Compte de résultats & télédéclaration fiscale</a></li>
       </ul>
     </div>
   </div>
