--- a/direction.html
+++ b/direction.html
@@ -16,9 +16,6 @@
       padding: 20px;
       background-color: #fff;
       border-bottom: 1px solid #ccc;
-      position: sticky;
-      top: 0;
-      z-index: 10;
     }
 
     .header-buttons button {
@@ -38,31 +35,44 @@
     h1 {
       text-align: center;
       font-size: 36px;
-      margin: 20px 0;
+      margin: 30px 0;
       color: #333;
     }
 
-    section {
-      margin: 40px auto;
-      max-width: 1400px;
+    .section {
+      max-width: 800px;
+      margin: 0 auto 40px auto;
       background: white;
       border-radius: 12px;
+      padding: 30px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
     }
 
-    section h2 {
-      margin: 0;
-      padding: 20px;
-      font-size: 22px;
-      background-color: #f0f0f0;
-      border-bottom: 1px solid #ccc;
+    .section h2 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 10px;
     }
 
-    iframe {
-      width: 100%;
-      height: 800px;
-      border: none;
+    .section ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .section ul li {
+      padding: 10px 0;
+      font-size: 18px;
+    }
+
+    .section ul li a {
+      color: #0066cc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .section ul li a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -74,30 +84,16 @@
 
   <h1>Espace Direction</h1>
 
-  <section>
-    <h2>🌐 Gestion du site internet</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRDTLvIVJAq1jgsWaUGJg72EUZHNrMK9najWU1UIzSHT9lze5O8JjdBNRdLvLeLtRH5_EVtj7tdvHKh/pubhtml?widget=true&amp;headers=false"></iframe>
-  </section>
-
-  <section>
-    <h2>🧾 Édition des fiches de paie</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQESMEpdwONmHhwPehHxBfhMyG9Unw4y6qaJ5uUes63hSP_OrRK4UtUPvHJ3TeWqIBe2XyTrMCaO8VH/pubhtml?gid=1049653321&single=true&widget=true&headers=false"></iframe>
-  </section>
-
-  <section>
-    <h2>👥 Gestion des employés et contrats de travail</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQESMEpdwONmHhwPehHxBfhMyG9Unw4y6qaJ5uUes63hSP_OrRK4UtUPvHJ3TeWqIBe2XyTrMCaO8VH/pubhtml?gid=628608397&single=true&widget=true&headers=false"></iframe>
-  </section>
-
-  <section>
-    <h2>🛒 Gestion des achats</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQESMEpdwONmHhwPehHxBfhMyG9Unw4y6qaJ5uUes63hSP_OrRK4UtUPvHJ3TeWqIBe2XyTrMCaO8VH/pubhtml?gid=181774848&single=true&widget=true&headers=false"></iframe>
-  </section>
-
-  <section>
-    <h2>📈 Compte de résultats & télédéclaration fiscale</h2>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQESMEpdwONmHhwPehHxBfhMyG9Unw4y6qaJ5uUes63hSP_OrRK4UtUPvHJ3TeWqIBe2XyTrMCaO8VH/pubhtml?gid=1454627420&single=true&widget=true&headers=false"></iframe>
-  </section>
+  <div class="section">
+    <h2>Outils de gestion</h2>
+    <ul>
+      <li>🌐 <a href="https://docs.google.com/spreadsheets/d/1lVCj1qZFd51hEpSQDfOkdkX6QGcRqiCJj1mLvFdYfH8/edit?gid=485697670" target="_blank">Gestion du site internet</a></li>
+      <li>🧾 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=1049653321" target="_blank">Édition des fiches de paie</a></li>
+      <li>👥 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=628608397" target="_blank">Gestion des employés et contrats de travail</a></li>
+      <li>🛒 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=181774848" target="_blank">Gestion des achats</a></li>
+      <li>📈 <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=1454627420" target="_blank">Compte de résultats & télédéclaration fiscale</a></li>
+    </ul>
+  </div>
 
 </body>
 </html>
