--- a/direction.html
+++ b/direction.html
@@ -10,42 +10,64 @@
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #f3f4f6;
+      position: relative;
+      min-height: 100vh;
+      overflow-x: hidden;
     }
 
-    .header {
-      padding: 20px;
-      background-color: #222;
-      color: white;
-      text-align: center;
+    body::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('https://i.ibb.co/pvgVjRyX/logo-rex-diner.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      opacity: 0.1;
+      z-index: 0;
     }
 
-    .back-btn {
+    .header-buttons {
+      margin: 20px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .header-buttons button {
+      padding: 10px 16px;
       background-color: #555;
       color: white;
       border: none;
-      padding: 10px 16px;
       border-radius: 6px;
-      cursor: pointer;
       font-weight: bold;
-      margin-top: 10px;
+      cursor: pointer;
     }
 
-    .back-btn:hover {
+    .header-buttons button:hover {
       background-color: #333;
     }
 
     h1 {
-      font-size: 32px;
-      margin: 20px 0;
+      text-align: center;
+      font-size: 36px;
+      margin: 0 0 30px;
+      color: #333;
+      position: relative;
+      z-index: 1;
     }
 
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 24px;
-      padding: 40px;
+      padding: 20px 40px 60px;
       max-width: 1200px;
       margin: auto;
+      position: relative;
+      z-index: 1;
     }
 
     .card {
@@ -88,10 +110,11 @@
 </head>
 <body>
 
-  <div class="header">
-    <h1>Espace Direction</h1>
-    <button class="back-btn" onclick="window.location.href='index.html'">⬅️ Retour à l'accueil</button>
+  <div class="header-buttons">
+    <button onclick="window.location.href='index.html'">⬅️ Retour à l'accueil</button>
   </div>
+
+  <h1>Espace Direction</h1>
 
   <div class="grid">
     <a href="https://docs.google.com/spreadsheets/d/1lVCj1qZFd51hEpSQDfOkdkX6QGcRqiCJj1mLvFdYfH8/edit?gid=485697670" target="_blank">
