--- a/direction.html
+++ b/direction.html
@@ -119,7 +119,7 @@
   <div class="grid">
     <a href="https://docs.google.com/spreadsheets/d/1lVCj1qZFd51hEpSQDfOkdkX6QGcRqiCJj1mLvFdYfH8/edit?gid=485697670" target="_blank">
       <div class="card">
-        <img src="https://i.ibb.co/jzPv4Sv/web-icon.png" alt="Site Web">
+        <img src="https://i.ibb.co/Lhz3Mvq8/gestion-site-web.jpg" alt="Site Web">
         <h2>Gestion du site internet</h2>
         <p>Mise à jour du contenu, liens, standard</p>
       </div>
@@ -127,7 +127,7 @@
 
     <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=1049653321" target="_blank">
       <div class="card">
-        <img src="https://i.ibb.co/WvTxLtr/payslip-icon.png" alt="Fiche de paie">
+        <img src="https://i.ibb.co/35Khvbzg/Fiche-de-paie.jpg" alt="Fiche de paie">
         <h2>Fiches de paie</h2>
         <p>Édition mensuelle des bulletins</p>
       </div>
@@ -135,7 +135,7 @@
 
     <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=628608397" target="_blank">
       <div class="card">
-        <img src="https://i.ibb.co/2hRxtbD/hr-icon.png" alt="RH">
+        <img src="https://i.ibb.co/k2G39fkx/employ-s.jpg" alt="RH">
         <h2>Employés & Contrats</h2>
         <p>Suivi RH, embauches, statut des contrats</p>
       </div>
@@ -143,7 +143,7 @@
 
     <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=181774848" target="_blank">
       <div class="card">
-        <img src="https://i.ibb.co/3MN5kv8/purchase-icon.png" alt="Achats">
+        <img src="https://i.ibb.co/MkjN5RGm/strategie-achat-btp.png" alt="Achats">
         <h2>Gestion des achats</h2>
         <p>Suivi des commandes et dépenses</p>
       </div>
@@ -151,7 +151,7 @@
 
     <a href="https://docs.google.com/spreadsheets/d/1ixmnTKR2u9XdbwaYB67D6lCce-QpKTpHTkjsERRJ3Us/edit?gid=1454627420" target="_blank">
       <div class="card">
-        <img src="https://i.ibb.co/tQWNjLb/accounting-icon.png" alt="Comptabilité">
+        <img src="https://i.ibb.co/21RLZ9QR/t-l-dec.jpg" alt="Comptabilité">
         <h2>Résultats & Fiscale</h2>
         <p>Comptabilité, déclarations, synthèses</p>
       </div>
