--- a/direction.html
+++ b/direction.html
@@ -78,6 +78,10 @@
       text-align: center;
       transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
+      height: 460px; /* Taille uniforme */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .card:hover {
@@ -86,21 +90,22 @@
     }
 
     .card h2 {
-      margin-top: 16px;
       font-size: 20px;
       color: #222;
+      margin: 16px 0 8px;
     }
 
     .card p {
       color: #555;
       font-size: 14px;
-      margin: 10px 0 0;
+      margin: 0;
     }
 
     .card img {
-      width: 60px;
-      height: 60px;
-      object-fit: contain;
+      width: 300px;
+      height: 300px;
+      object-fit: cover;
+      margin: auto;
     }
 
     a {
