--- a/direction.html
+++ b/direction.html
@@ -60,11 +60,12 @@
     }
 
     .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 24px;
       padding: 20px 40px 60px;
-      max-width: 1200px;
+      max-width: 1600px;
       margin: auto;
       position: relative;
       z-index: 1;
@@ -78,7 +79,8 @@
       text-align: center;
       transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
-      height: 460px; /* Taille uniforme */
+      width: 360px;
+      height: 500px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -92,7 +94,7 @@
     .card h2 {
       font-size: 20px;
       color: #222;
-      margin: 16px 0 8px;
+      margin: 12px 0 8px;
     }
 
     .card p {
@@ -102,10 +104,10 @@
     }
 
     .card img {
-      width: 300px;
-      height: 300px;
-      object-fit: cover;
-      margin: auto;
+      max-width: 100%;
+      height: 280px;
+      object-fit: contain;
+      border-radius: 12px;
     }
 
     a {
