--- a/index.html
+++ b/index.html
@@ -74,23 +74,23 @@
 <body>
   <div class="container">
     <div class="card" onclick="window.location.href='caisse.html'">
-      <img src="https://i.ibb.co/rKT93TPc/pack-kooron-cx901-23711611.jpg" alt="Caisse">
+      <img src="https://i.ibb.co/Ldr7C9bQ/Caisse-V2.png" alt="Caisse">
       <h2>CAISSE</h2>
     </div>
     <div class="card" onclick="window.location.href='resume.html'">
-      <img src="https://i.ibb.co/Z6tx3GtL/statistiques.jpg" alt="Statistiques">
+      <img src="https://i.ibb.co/xR2GR2P/stat-V2.png" alt="Statistiques">
       <h2>STATISTIQUES</h2>
     </div>
     <div class="card" onclick="window.location.href='standard.html'">
-      <img src="https://i.ibb.co/fzGLj7Jh/standard.jpg" alt="Standard">
+      <img src="https://i.ibb.co/1Jh8S920/Chat-GPT-Image-11-juin-2025-14-43-10-removebg-preview.png" alt="Standard">
       <h2>STANDARD</h2>
     </div>
     <div class="card" onclick="window.location.href='ressourcehumaine.html'">
-      <img src="https://i.ibb.co/twLKT3HS/Ressources-Humaines.jpg" alt="Ressources Humaines">
+      <img src="https://i.ibb.co/SDt0b0yn/ressource-humaine-2.png" alt="Ressources Humaines">
       <h2>RESSOURCES HUMAINES</h2>
     </div>
     <div class="card" onclick="accesDirection()">
-      <img src="https://i.ibb.co/CpPP1Qjp/dirigeant.jpg" alt="Direction">
+      <img src="https://i.ibb.co/Z1MfK4DW/Direction3.png" alt="Direction">
       <h2>DIRECTION</h2>
     </div>
   </div>
