--- a/index.html
+++ b/index.html
@@ -112,7 +112,18 @@
 <body>
 
   <div class="alert-banner">
-    🛻 RAPPEL DU REX : Le camion doit être vidé, le plein fait et les réparations effectuées. Non, les frites froides ne comptent pas comme chargement !
+    🦖 [RAPPEL DU REX] 
+Chers livreurs,
+à la fin de votre tournée, merci de ramener le camion dans un état plus présentable qu’un steak tartare !
+
+✅ Carburant rempli (pas juste un fond de réservoir façon mojito)
+✅ Réparations faites (un rétro en moins n’est PAS une option aérodynamique)
+✅ Camion vidé (non, vos frites froides et gobelets vides ne font pas partie de l’inventaire)
+
+Parce qu’on est peut-être des dinos, mais on roule pas à l’âge de pierre !
+
+Merci pour votre professionnalisme,
+et n’oubliez pas : un camion bien entretenu, c’est un T-Rex content.
   </div>
 
   <div class="header-message">
